# codex-mem

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/codex_mem/: __init__.py  cli.py  config.py  extractor.py  mcp_server.py  models.py  notify.py  paths.py  redact.py  spool.py  store.py
tests/: test_extractor_rules.py  test_logging_setup.py  test_mcp_logging.py  test_mcp_tools.py  test_notify_ingest.py  test_redact.py  test_store.py
