[tool.poetry]
name = "codex-mem"
version = "0.1.0"
description = "Persistent local memory layer for Codex (notify ingest + MCP recall)"
authors = ["Cameron Basham <albatrossautomata@gmail.com>"]
readme = "README.md"
packages = [{ include = "codex_mem", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
typer = "^0.12"
pydantic = "^2.6"
fastmcp = "^0.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.6"
mypy = "^1.11"

[tool.poetry.scripts]
codex-mem = "codex_mem.cli:app"
codex-mem-serve = "codex_mem.mcp_server:run"
codex-mem-notify = "codex_mem.notify:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["docs"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "N",
  "W",
]
